# frida-cycript

./: .gitignore  .gitmodules  Analysis.cpp  Analyze.cpp  Application.cpp  Application.mm  Baton.hpp  Bridge.cpp  Bridge.def  Bridge.def.in  Bridge.sh  CYGWIN_NT-6.1.mk  Code.hpp  Complete.cpp  Connector.cpp  Console.cpp  Context.hpp  Cycript.h  Cycript.l  Cycript.l.in  Cycript.y  Cycript.y.in  Cycript.yy.in  Darwin-arm.mk  Darwin-i386.mk  Darwin.mk  Decode.cpp  Decode.hpp  Display.cpp  Display.hpp  Driver.cpp  Driver.hpp  E4X.hpp  Error.cpp  Error.hpp  Exception.hpp  Execute.cpp  Execute.hpp  Execute.mk  Filter.sh  (+134 more)
Agent/: index.js
E4X/: Syntax.hpp
Java/: Cycript.java  Execute.cpp
Mach/: Inject.cpp  Memory.hpp
ObjectiveC/: Internal.hpp  Library.mm  Output.cpp  Output.mm  Replace.cpp  Replace.mm  Syntax.hpp
Python/: Execute.cpp
Ruby/: Execute.cpp
bindings/node/cylang/: .prebuildrc  addon.cpp  binding.gyp  index.js  package-lock.json  package.json
bindings/node/cylang/test/: compiler.js
include/: pthread_internals.h  pthread_machdep.h
m4/: framework.m4
modules/com/saurik/substrate/: MS.cy
modules/org/cycript/: NSLog.cy
sig/: copy.cpp  ffi_type.cpp  ffi_type.hpp  parse.cpp  parse.hpp  types.hpp
src/: Analysis.cpp  Analyze.cpp  Console.cpp  Decode.cpp  Execute.cpp  Filter.py  FixupParser.py  Library.cpp  Local.hpp  Makefile.am  Pooling.hpp  fetch-node-modules.py  filter.py  generate-bridge-definitions.py  generate-database.py  generate-parser.py  generate-runtime.py  libcycript-core-arm64.symbols  libcycript-core.symbols  libcycript.vcxproj  meson.build  package-lock.json  package.json
src/Agent/: index.js
src/Agent/internals/: funcs.js
src/Java/: Execute.cpp
src/sig/: copy.cpp  parse.cpp
test/: addon.cpp  binding.gyp  package-lock.json  package.json  types.js
trash/: Backup.bak  Parser.mm  Token.py
website/: index.html
